Junior fixes for ForcedShrinkerIT
- Add final to cluster field
- Convert if-instanceof chain to switch in rebuildFromStages
- Convert if/else return to ternary in stillFails
- Replace .get(0) with .getFirst() in resolveExpr
- Remove redundant case braces in shrinkExpressions

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>